# aibox

./: .gitignore  Pipfile  README.md  commands  pyproject.toml
data/: cereal.csv  fpl_bootstrap_static.json  fpl_schema.json  gee_catalog.json
labs/: agents_in_graph.py  camel_stock_trader.py  countries_fighting_climate_change.py  csv_llamaindex_loader.py  data_analyst_agent.py  elevenlabs.py  fpl_coach.py  fpl_data_collector.py  fpl_simulator.py  fpl_simulator_executor.py  fpl_simulator_react.py  fpl_to_graphs.py  gdp_chart_generator.py  graph_chain.py  multi_agent_collaboration.py  natural_to_cypher.py  owid_data_analizer.py  owid_explorer.py  owid_explorer_streamlit.py  simple_agent_in_loop.py  smart_fpl_assistant.py  smart_fpl_react_assistant.py  web_researcher.py
labs/semantic-reviewer/: agent.py  config.py  config_template.toml  main.py  tools.py  utils.py
notebooks/: engineer_agent.ipynb  green_travel_agent.ipynb  semantic_search_from_json.ipynb  web_search_agent.ipynb
scripts/: changelog_suggester.py
