[tool.poetry]
name = "aibox"
version = "0.1.0"
description = "Just a sandbox for AI"
authors = ["margostino"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >=3.9.8,<4.0"
langchain = "0.1.5"
openai = "^1.10.0"
jq = "^1.6.0"
pyarrow = "^15.0.0"
chromadb = "^0.4.22"
pandas = "^1.5.3"
neo4j = "^5.16.0"
langchain-openai = "^0.0.5"
streamlit = "^1.30.0"
tabulate = "^0.9.0"
matplotlib = "^3.8.2"
langchain-experimental = "0.0.50"
langchain-community = "0.0.18"
llama-index = "^0.9.39"
wikipedia = "^1.4.0"
numexpr = "^2.9.0"
langchainhub = "^0.1.14"
gql = "^3.5.0"
requests-toolbelt = "^1.0.0"
#elevenlabs = "^0.2.27" ==> conflict with pandasai
pandasai = "^1.5.18"
watchdog = "^3.0.0"
pydantic = "1.10.14"
langgraph = "^0.0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
